--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     implementation "androidx.cardview:cardview:1.0.0"
+
+    implementation "com.squareup.retrofit2:retrofit:2.1.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.1.0"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.5.0"
 }
